--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 html, #root, #root>div {
-    height: 100% !important;
+    height: 100vh !important;
 }
 
 @media only screen and (min-width: 480px) {
